force-app/main/default/objects/Sale__c/Sale__c.object-meta.xml
<CustomObject>
    <label>Sale</label>
    <nameField>
        <displayFormat>SALE-{0000}</displayFormat>
        <label>Sale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sale</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>