force-app/main/default/objects/Sale__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sale</relationshipLabel>
    <relationshipName>Sale</relationshipName>
    <type>Lookup</type>
</CustomField>